2019-01-05  Tom Tromey  <tom@tromey.com>

	* infrun.c (wait_for_inferior): Use cleanup_function.
	(delete_just_stopped_threads_infrun_breakpoints_cleanup): Remove.

2019-01-05  Tom Tromey  <tom@tromey.com>

	* symfile.c (syms_from_objfile_1): Use cleanup_function.
	(clear_symtab_users_cleanup): Remove.
	(reread_symbols): Use cleanup_function.

2019-01-05  Tom Tromey  <tom@tromey.com>

	* linux-nat.c (cleanup_target_stop): Remove.
	(linux_nat_target::static_tracepoint_markers_by_strid): Use
	cleanup_function.

2019-01-05  Tom Tromey  <tom@tromey.com>

	* infcall.c (cleanup_delete_std_terminate_breakpoint): Remove.
	(call_function_by_hand_dummy): Use cleanup_function.

2019-01-05  Tom Tromey  <tom@tromey.com>

	* infrun.c (fetch_inferior_event): Use cleanup_function.
	* utils.h (make_bpstat_clear_actions_cleanup): Don't declare.
	* top.c (execute_command): Use cleanup_function.
	* breakpoint.c (bpstat_do_actions): Use cleanup_function.
	* utils.c (do_bpstat_clear_actions_cleanup)
	(make_bpstat_clear_actions_cleanup): Remove.

2019-01-05  Tom Tromey  <tom@tromey.com>

	* breakpoint.c (create_breakpoint): Remove cleanup.

2019-01-05  Tom Tromey  <tom@tromey.com>

	* common/cleanup-function.h: New file.
	* breakpoint.c (until_break_command): Use
	cleanup_function.
	* infcmd.c (delete_longjmp_breakpoint_cleanup): Remove.
	(until_next_command): Use cleanup_function.
	* inferior.h (delete_longjmp_breakpoint_cleanup): Don't declare.

2019-01-05  Tom Tromey  <tom@tromey.com>

	* contrib/cleanup_check.py: Remove.
	* contrib/gcc-with-excheck: Remove.
	* contrib/exsummary.py: Remove.
	* contrib/excheck.py: Remove.

2019-01-05  Joel Brobecker  <brobecker@adacore.com>

	* thread.c (delete_thread_1): Add gdb_assert that THR is not
	NULL. Initialize tpprev to NULL instead of assigning it
	to NULL on the next statement.
	* windows-nat.c (windows_delete_thread): Remove check for
	main_thread_id before printing thread exit notifications.